# SRW

./: .gitignore  CMakeLists.txt  CMakeSettings.json  COPYRIGHT.txt  Makefile  README.md  README.txt  compile.sh  inventory.txt  repository_struct.txt
.github/workflows/: pypi_publish.yml  testing.yml
clients/python/: pytest.ini  requirements-dev.txt  setup.py
clients/python/srwpy/: SRWLIB_ExampleViewDataFile.py  srwl_bl.py  srwl_uti_mag.py  srwl_uti_smp.py  srwl_uti_smp_rnd_obj2d.py  srwl_uti_smp_rnd_obj3d.py  srwl_uti_src.py  srwl_uti_und.py  srwlib.py  uti_io_genesis.py  uti_mag.py  uti_plot_com.py  uti_plot_matplotlib.py
clients/python/tests/: conftest.py  test_example01.py  test_example04.py  test_example06.py  test_example14.py  test_example16.py
cmake/: FindFFTW2.cmake
cpp/cmake/: CMakeLists.txt  CMakeLists.txt.old  CMakeLists.txt.orig  FindFFTW.cmake  FindFFTW2.cmake
cpp/gcc/: MAC_COMPILE  Makefile  Makefile.old  README.txt  client_srwlib_makefile02.linux.old  srwlib_makefile03.linux.old
cpp/py/: Makefile  setup.py
cpp/src/: CMakeLists.txt
cpp/src/core/: gmfft.cpp  gmfft.h  gmfft_gpu.cu  gmfft_gpu.h  srclcuti.cpp  srcradint.cpp  srcradint.h  srctrjdt.h  srebmdat.h  sremitpr.cpp  sremitpr.h  srercode.h  srgsnbm.cpp  srgsnbm.h  srgtrjdt.cpp  srgtrjdt.h  srisosrc.cpp  srisosrc.h  srmagcnt.cpp  srmagcnt.h  srmagelem.h  srmagfld.cpp  srmagfld.h  srmatsta.cpp  srmatsta.h  srmemory.h  srmlttsk.h  srobject.h  sroptang.h  sroptapt.cpp  (+78 more)
cpp/vc/: SRW.sln  SRWLClientC.vcproj  SRWLClientC.vcxproj  SRWLClientIgor.vcproj  SRWLClientIgor.vcxproj  SRWLClientIgor.vcxproj.filters  SRWLClientPython.vcproj  SRWLClientPython.vcxproj  SRWLClientPython.vcxproj.filters  SRWLIB.vcproj  SRWLIB.vcxproj  SRWLIB.vcxproj.filters  srwlclient32.ilk
docs/: Doxyfile_core  Doxyfile_lib  Makefile
docs/source/: conf.py  index.rst  installation.rst  literature.rst  usage.rst
env/python/: MANIFEST.in  requirements-optional.txt  setup.py
examples/python/: Dependency.txt  ReadMe.txt  SRWLIB_Example01.py  SRWLIB_Example01_kick_matr.py  SRWLIB_Example02.py  SRWLIB_Example03.py  SRWLIB_Example04.py  SRWLIB_Example05.py  SRWLIB_Example06.py  SRWLIB_Example06_PETRA.py  SRWLIB_Example07.py  SRWLIB_Example08.py  SRWLIB_Example09.py  SRWLIB_Example10.py  SRWLIB_Example11.py  SRWLIB_Example12.py  SRWLIB_Example13.py  SRWLIB_Example14.py  SRWLIB_Example15.py  SRWLIB_Example16.py  SRWLIB_Example17.py  SRWLIB_Example18.py  SRWLIB_Example19.py  SRWLIB_Example20.py  SRWLIB_ExamplesRunAll.py  srwl_bl.py  srwl_uti_smp_rnd_obj2d.py  srwl_uti_und.py  srwlib.py  uti_io.py  uti_math.py  uti_plot_matplotlib.py
ext_lib/: CMakeLists.txt  GlutViewer.lib  GlutViewer.lib.old  GlutViewer64.lib  fftw64_f.lib  fftw_f.lib  glut32.lib  glut64.lib  libf2c.lib  libpng.lib  libpng64.lib  zlib64.lib
ext_lib/fftw/: CMakeLists.txt  CMakeLists.txt.old
ext_lib/fftw3/: CMakeLists.txt  CMakeLists.txt.old
literature/particle_tracking/: und_termin_smooth.nb  und_termin_smooth_02.nb
literature/sr_fel_apps/: er_formulae.ppt
literature/x_ray_optics/: BrgDiffXtl_SimpleBragg.m  thin_and_thick_optics.ppt
python/: Makefile  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
python/srwpy/: srwl_bl.py  srwl_uti_cryst.py  srwl_uti_smp.py  srwlib.py  uti_io_genesis.py  uti_math.py  uti_math_eigen.py  uti_plot.py  uti_plot_com.py
python/tests/: conftest.py  test_example01.py  test_example02.py  test_example03.py  test_example04.py  test_example05.py  test_example06.py  test_example07.py  test_example08.py  test_example09.py  test_example10.py  test_example11.py  test_example12.py  test_example13.py  test_example14.py  test_example15.py  test_example16.py  test_example17.py  test_example18.py  test_example19.py  test_example20.py  test_imports.py
src/: CMakeLists.txt  Makefile
src/clients/: CMakeLists.txt
src/clients/c/: CMakeLists.txt
src/clients/python/: CMakeLists.txt  pyparse.h
src/core/: CMakeLists.txt  srclcuti.h  srgsnbm.cpp  srgtrjdt.cpp  sroptcryst.cpp  sroptel2.cpp  sroptelm.h  sroptfoc.h  sroptgrat.cpp  sroptgrat.h  sroptgtr.h  sropthck.cpp  sroptmat.cpp  sroptpsh.h  srradinc.cpp  srradmnp.h  srstraux.h  srsysuti.h
src/cpp/py/: Makefile
src/cpp/src/clients/igor/: resource.h  srcligor.h
src/cpp/src/core/: srctrjdt.cpp  srmagcnt.cpp  sroptcnt.h  sroptcryst.h  sroptdrf.cpp  sroptdrf.h  sroptelm.cpp  sroptgtr.cpp  sropthck.h  sroptshp.h  sroptwgr.cpp  sroptzps.h  srprgind.cpp  srprgind.h  srpropme.h  srptrjdt.cpp  srptrjdt.h  srradint.cpp  srradint.h  srsend.h  srthckbm.cpp  srtrjdat.cpp  srtrjdat.h  srtrjdat3d.h  srwfrsmp.h
src/cpp/src/ext/f2c_min/: LREAD.C
src/cpp/src/ext/genesis/genesis_july08/: all_com.c  esource.c  input.c  source.c
src/cpp/src/ext/genesis/genesis_june05/: beamcom_com.c  cartcom_com.c  diagcom_com.c  esource.c  field.c  incoherent.c  initrun.c  input.c  loadbeam.c  math.c  source.c  workspace_com.c
src/cpp/src/ext/genmath/: fftw.h.orig_win
src/cpp/src/lib/: srentry.cpp  srerror.cpp  srerror.h  srigorre.h
src/cpp/vc/: SRWLClientC.vcxproj.filters  SRWLClientPython.vcxproj.filters
src/cpp/xcode/SRWLClientIgor.xcodeproj/SRWLClientIgor.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/cpp/xcode/SRWLClientIgor.xcodeproj/SRWLClientIgor.xcodeproj/project.xcworkspace/xcuserdata/chubar.xcuserdatad/: UserInterfaceState.xcuserstate
src/cpp/xcode/SRWLClientIgor.xcodeproj/SRWLClientIgor.xcodeproj/project.xcworkspace/xcuserdata/ruizi.xcuserdatad/: WorkspaceSettings.xcsettings
src/cpp/xcode/SRWLClientIgor.xcodeproj/__MACOSX/SRWLClientIgor.xcodeproj/: ._project.xcworkspace
src/ext/: CMakeLists.txt
src/ext/auxparse/: CMakeLists.txt  auxparse.cpp  smartptr.h
src/ext/f2c_min/: CLOSE.C  FMT.C  FMT.H  IIO.C  INQUIRE.C  POW_II.C
src/ext/genesis/: CMakeLists.txt  field.c
src/ext/genesis/genesis_july08/: incoherent.c  tdepend.c
src/ext/genesis/genesis_june05/: check.c  pushp.c  stepz.c  track.c  tslipcom_com.c
src/ext/genmath/: CMakeLists.txt  gmfft.cpp  gminterp.h  gmvect.h
src/lib/: CMakeLists.txt
vc/: SRW.sln  SRWLClientIgor.vcxproj  SRWLIB.vcxproj
(+743 files in other folders)
